--- a/src/style.css
+++ b/src/style.css
@@ -741,3 +741,13 @@ button:focus {
 .fork-btn-inner::after {
   display: none !important;
 }
+
+.custom-lightbox-container .ril-close-button {
+  top: 20px;
+  right: 20px;
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 50%;
+  padding: 5px;
+  color: #000;
+  font-size: 16px;
+}
